# ai-medica-back-end

./: .fuse_hidden0000146f00000001  .gitignore  README.md  db.sqlite  pyproject.toml  requirements.txt  rjaybfbf
accounts/: admin.py  apps.py  custom_claim.py  forms.py  models.py  serializers.py  tests.py  views.py
accounts/migrations/: 0001_initial.py
cancer/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
cancer/migrations/: 0001_initial.py  0002_alter_cancer_area_mean_alter_cancer_compactness_mean_and_more.py  0003_cancer_name.py  0004_cancer_age_cancer_email.py
config/: settings.py  urls.py
hepatitis/: admin.py  apps.py  forms.py  models.py  predictor.py  serializers.py  tests.py  urls.py  views.py
hepatitis/migrations/: 0001_initial.py  0002_alter_hepatitis_mobile.py  0002_rename_steriod_hepatitis_steroid.py  0003_rename_fatique_hepatitis_fatigue_and_more.py
stroke/: admin.py  forms.py  models.py  permessions.py  serializers.py  tests.py  urls.py  views.py
stroke/migrations/: 0001_initial.py  0002_alter_stroke_owner.py
