[tool.poetry]
name = "ai-medica-back-end"
version = "0.1.0"
description = ""
authors = ["Jehadabuawwad <jehadabuawwad@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0"
whitenoise = "^5.3.0"
sklearn = "^0.0"
pandas = "^1.3.4"
django-environ = "^0.8.1"
django-cors-headers = "^3.10.1"
djangorestframework = "^3.12.4"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
